--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^8.1.0",
     "mysql": "^2.15.0",
+    "node-binance-api": "^0.2.11",
     "otp": "^0.1.3",
     "prompt": "^1.0.0",
     "q": "^1.5.1",
@@ -19,6 +20,7 @@
     "short-unique-id": "^1.1.0",
     "squel": "^5.12.0",
     "string-format": "^0.5.0",
+    "technicalindicators": "^1.0.21",
     "uuid": "^3.1.0",
     "uuid-js": "^0.7.5",
     "weighted": "^0.3.0"
