--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grpc": "^1.6.6",
     "https": "^1.0.0",
     "jsonwebtoken": "^8.1.0",
+    "moment": "^2.19.4",
     "mysql": "^2.15.0",
     "node-binance-api": "^0.2.11",
     "otp": "^0.1.3",
