--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "forever start -l autobot.log  -a BTC-USDT.js && forever start -l autobot.log  -a ETH-USDT.js && forever start -l autobot.log  -a LTC-BTC.js && forever start -l autobot.log  -a -XRPBTC.js",
+    "start": "forever start -l autobot.log  -a BTC-USDT.js && forever start -l autobot.log  -a ETH-USDT.js && forever start -l autobot.log  -a LTC-BTC.js && forever start -l autobot.log  -a XRP-BTC.js",
     "stop": "forever stopall"
   },
   "repository": {
