--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "main": "index.js",
   "scripts": {
     "start": "forever start -l autobot.log  -a BTC-USDT.js && forever start -l autobot.log  -a ETH-USDT.js && forever start -l autobot.log  -a LTC-BTC.js && forever start -l autobot.log  -a XRP-BTC.js",
-    "stop": "forever stopall"
+    "stop": "forever stopall",
+    "log": "tail -f /home/ec2-user/.forever/autobot.log"
   },
   "repository": {
     "type": "git",
