--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
+    "columnify": "^1.5.4",
     "crypto": "^1.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
