--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "viewlog": "tail -f /home/ec2-user/.forever/autobot.log",
     "cleanlog": "rm /home/ec2-user/.forever/autobot.log",
     "rest": "forever start -l rest.log -a RESTServer.js",
-    "web": "forever start -l web.log -a WebServer.js"
+    "web": "forever start -l web.log -a WebServer.js",
+    "pull": "git pull && namtrung2212\nNirvana123!@#\n"
   },
   "repository": {
     "type": "git",
