--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "npm start && npm run rest && npm run web && npm run viewlog",
+    "start": "forever start -l autobot.log  -a index.js && npm run rest && npm run web && npm run viewlog",
     "stop": "forever stopall",
     "viewlog": "tail -f /home/ec2-user/.forever/autobot.log",
     "cleanlog": "rm /home/ec2-user/.forever/autobot.log",
